--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
-title       : Statistics-101 using R
-subtitle    : 
-author      : 
+title       : Statistics-101  
+subtitle    : using R
+author      : Tuhin Mahmud
 job         : 
 framework   : io2012        # {io2012, html5slides, shower, dzslides, ...}
 highlighter : highlight.js  # {highlight.js, prettify, highlight}
@@ -21,6 +21,16 @@ https://tuhinmahmaud.shinyapps.io/PowerApp/
 ## Central limit Theorem
 https://tuhinmahmaud.shinyapps.io/CentralLimitApp/
 
+---  Spearman's p and Pearson's r
+```{r}
+X <- data.frame("attributes"=NA,"Pearson'r"=NA,"Spearman's r"=NA)
+X[1][1]<-"trend";X[1][2]<-"linear"; X[1][3]<-"monotonic"
+X[2][1]<-"sampling distribution";X[2][2]<-"normal";X[2][3]<-"non normal"
+X[3][1]<-"data";X[3][2]<-"interval";X[3][3]<-"non parametric"
+library(panda)
+pander(X[1:3,1:3])
+```
 
+--- t-test
 
 
