--- a/index.Rmd
+++ b/index.Rmd
@@ -24,9 +24,15 @@ https://tuhinmahmaud.shinyapps.io/CentralLimitApp/
 ---  Spearman's p and Pearson's r
 ```{r}
 X <- data.frame("attributes"=NA,"Pearson'r"=NA,"Spearman's r"=NA)
-X[1][1]<-"trend";X[1][2]<-"linear"; X[1][3]<-"monotonic"
-X[2][1]<-"sampling distribution";X[2][2]<-"normal";X[2][3]<-"non normal"
-X[3][1]<-"data";X[3][2]<-"interval";X[3][3]<-"non parametric"
+X[1][1]<-"trend"
+X[1][2]<-"linear" 
+X[1][3]<-"monotonic"
+X[2][1]<-"sampling distribution"
+X[2][2]<-"normal"
+X[2][3]<-"non normal"
+X[3][1]<-"data"
+X[3][2]<-"interval"
+X[3][3]<-"non parametric"
 library(panda)
 pander(X[1:3,1:3])
 ```
