--- a/backup/index.Rmd
+++ b/backup/index.Rmd
@@ -22,15 +22,23 @@ https://tuhinmahmaud.shinyapps.io/PowerApp/
 https://tuhinmahmaud.shinyapps.io/CentralLimitApp/
 
 ---  Spearman's p and Pearson's r
+```{r echo=FALSE}
 
-<!-- html table generated in R 3.1.0 by xtable 1.7-4 package -->
-<!-- Sat Mar 21 21:46:40 2015 -->
-<table border=1>
-<tr> <th>  </th> <th> attributes </th> <th> Pearson.r </th> <th> Spearman.s.r </th>  </tr>
-  <tr> <td align="right"> 1 </td> <td> trend </td> <td> linear </td> <td> monotonic </td> </tr>
-  <tr> <td align="right"> 2 </td> <td> sampling distribution </td> <td> normal </td> <td> non normal </td> </tr>
-  <tr> <td align="right"> 3 </td> <td> data </td> <td> interval </td> <td> non parametric </td> </tr>
-   </table>
+X <- data.frame("attributes"=NA,"Pearson'r"=NA,"Spearman's r"=NA)
+X[1,1]<-"trend";X[1,2]<-"linear";X[1,3]<-"monotonic"
+X[2,1]<-"sampling distribution"; X[2,2]<-"normal"; X[2,3]<-"non normal"
+X[3,1]<-"data"; X[3,2]<-"interval";X[3,3]<-"non parametric"
+require(xtable)
+#require(pander)
+#pander(X[1:3,1:3], style = 'grid')
+#pander(X[1:3,1:3],style = 'simple', split.cells = Inf)
+#set.alignment('left', row.names = 'right')
+#panderOptions('table.split.table', Inf)
+#pandoc.table(X[1:3,1:3])
+```
+```{r, results='asis',echo=FALSE}
+print(xtable(X[1:3,1:3]), type = "html")
+```
 
 --- Choosing a Statistical Test
 
