--- a/index.Rmd
+++ b/index.Rmd
@@ -11,7 +11,10 @@ mode        : selfcontained # {standalone, draft}
 knit        : slidify::knit2slides
 --- 
 
-## Varible types
+## Varible types 
+1. Interval
+2. Categorical
+3. Ordinal
 
 
 --- 
@@ -29,12 +32,15 @@ knit        : slidify::knit2slides
 ## Input and Output variables
 
 ```{r echo=FALSE,message=FALSE}
-setwd("C:/Users/IBM_ADMIN/Documents/slidify")
-df<-data.frame("name"="Input Data Type","Parent"=NA)
-rbind(df,setNames(data.frame("Interval","Input Data Type"),names(df)))
-rbind(df,setNames(data.frame("Categorical","Input Data Type"),names(df)))
+library("googleVis")
+ setwd("C:/Users/IBM_ADMIN/Documents/GitHub/stat101")
+
 ```
-```{r echo=FALSE}
+```{r}
+df<-data.frame("name"="Input Data Type","Parent"=NA,"value"=10,"Fac"=2)
+df<-rbind(df,setNames(data.frame("Interval","Input Data Type",10,2,stringsAsFactors       = FALSE),names(df)))
+
+df<- rbind(df,setNames(data.frame("Categorical","Input Data Type",10,2, stringsAsFactors       = FALSE),names(df)))
 names<-gvisOrgChart(df,options=list(width=600,height=250,
                                     size='large', allowCollapse=TRUE))
 plot(names)
